<resources>
    <string name="app_name">Glukometr</string>
    <string name="description_home_page">Home page</string>
    <string name="current_measuring">Текущий результат:</string>
    <string name="last_meaning"></string>
    <string name="ok_result">Желательный диапазон сахара в крови</string>
    <string name="not_good_result">Легкое отклонение вверх или вниз от нормы</string>
    <string name="bad_result">Сильное отклонение вверх или вниз от нормы</string>
    <string name="level_of_waving">Уровень колебаний:</string>
    <string name="high">Высокий</string>
    <string name="average_value">Среднее значение:</string>
    <string name="higher_the_ok">Сильно ниже нормы</string>
    <string name="current_date">24 Апреля 2023 09.23</string>
    <string name="bluetooth">Bluetooth:</string>
    <string name="description">Подробности</string>
</resources>