<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="140dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/current_date"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAppearance="@style/ShapeAppearance.Material3.Corner.Large"
            android:text="@string/current_date"/>

        <Button
            android:id="@+id/details"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#72F4FBF6"
            android:text="@string/description"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:background="@drawable/secondary_block">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/heart"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:textSize="15sp"
                android:textAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
                android:text="@string/average_value"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_of_waving"
                android:textSize="15sp"
                android:textAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/average_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:textAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
                android:text="@string/higher_the_ok"/>
            <TextView
                android:id="@+id/waving_value"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textSize="15sp"
                android:textAppearance="@style/ShapeAppearance.Material3.Corner.Large"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>