<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/tool_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/menu_bg">
        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/home"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_home_page" />

        <View
            android:id="@+id/separator"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_toLeftOf="@id/recent_list"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/home_button"
            android:background="@drawable/separator" />

        <ImageButton
            android:layout_marginTop="12dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/recent_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_home_page"
            android:src="@drawable/recents"
            android:onClick="RecentOnClick"/>
        <View
            android:id="@+id/separator1"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/recent_list"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@drawable/separator"/>
        <ImageButton
            android:id="@+id/settings"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/separator1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_home_page"
            android:src="@drawable/settings" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/last_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_measuring"
            android:textColor="@color/text"
            android:textSize="30sp" />
        <RelativeLayout
            android:id="@+id/secondary_block"
            android:layout_width="350dp"
            android:layout_height="110dp"
            android:layout_below="@id/last_stat"
            android:layout_marginTop="20dp"
            android:background="@drawable/secondary_block">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_centerVertical="true"
                android:src="@drawable/heart"
                android:onClick="onClickRotate"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="89dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="45dp"
                android:src="@drawable/scale" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="70dp"
                android:layout_height="10dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="120dp"
                android:layout_marginTop="83dp"
                android:background="@drawable/arrow_2" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/res"
        android:layout_alignStart="@id/res"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/green_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_result"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/yellow_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_good_result"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:src="@drawable/red_circle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bad_result"
                android:textColor="@color/text" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>